Initial plugin commit, changing everything needed and building Gradle. Plugin still functionally the example plugin.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
+displayName=Patience Clan Leaderboard
 author=Nobody
-description=An example greeter plugin
+description=Patience Clan Leaderboard
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.leaderboard.LeaderboardPlugin
