--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Patience Clan Leaderboard
-author=Nobody
-description=Patience Clan Leaderboard
+displayName=Discord Boss KC JSON Uploader
+author=BMG334
+description=A lightweight plugin that uploads a player's boss kc and pb to discord. Made for a clanmate.
 tags=
 plugins=com.leaderboard.LeaderboardPlugin
